# scraperx

./: .gitignore  .gitleaksignore  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  ruff.toml
.git-backup-before-rewrite/: COMMIT_EDITMSG  config  index  packed-refs
.git-backup-before-rewrite/logs/refs/heads/: main
.git-backup-before-rewrite/logs/refs/remotes/origin/: HEAD  main
.git-backup-before-rewrite/objects/pack/: pack-2c07743916a1f40ec322c2eeee7e8c477c3a7f35.idx  pack-2c07743916a1f40ec322c2eeee7e8c477c3a7f35.pack  pack-2c07743916a1f40ec322c2eeee7e8c477c3a7f35.rev
.git-backup-before-rewrite/refs/heads/: main
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: NEXT-SESSION-GITHUB-ANALYZER.md  SETUP-PYPI.md  api-endpoint-discovery.md
output/bmw-trails/canada/: 2026-04.jsonl  2026-04.jsonl.processed
output/bmw-trails/dvsa/: 2026-04.jsonl  2026-04.jsonl.processed
output/bmw-trails/e90post/: 2026-04.jsonl  2026-04.jsonl.processed
output/bmw-trails/kba/: 2026-04.jsonl  2026-04.jsonl.processed
output/bmw-trails/nhtsa/: 2026-04.jsonl  2026-04.jsonl.processed
output/bmw-trails/reddit/: 2026-04.jsonl  2026-04.jsonl.processed
reports/: vulnerability_report_2026-04-18.md
scraperx/: __init__.py  __main__.py  _sqlite_pragmas.py  _transcript_common.py  authenticity.py  avatar_matcher.py  blockchain.py  doctor.py  fetch.py  gh_discover.py  impersonation.py  profile.py  scraper.py  screenshot.py  search.py  social_db.py  thread.py  token_extractor.py  tv_symbol_resolver.py  twscrape_backend.py  video_discovery.py  vimeo_scraper.py  youtube_scraper.py
scraperx/bmw_corpus/: README.md  __init__.py  _output.py
scraperx/bmw_corpus/forum_scraper/: __init__.py  _http.py  e90post.py
scraperx/bmw_corpus/forum_scraper/engines/: __init__.py  vbulletin.py
scraperx/bmw_corpus/recalls/: __init__.py  canada.py  dvsa.py  kba.py  nhtsa.py
scraperx/bmw_corpus/reddit/: __init__.py  core.py
scraperx/github_analyzer/: __init__.py  cli.py  core.py  github_api.py  schemas.py  scoring.py  semantic.py  synthesis.py  telemetry.py  trending.py
scraperx/github_analyzer/mentions/: __init__.py  _http.py  arxiv.py  devto.py  hn.py  pwc.py  reddit.py  stackoverflow.py
tests/: test_blockchain.py  test_fetch.py  test_gh_discover.py  test_github_analyzer_cache.py  test_github_analyzer_schemas.py  test_github_api.py  test_github_cli.py  test_github_mentions.py  test_github_metadata_enrichment.py  test_github_pipeline_e2e.py  test_github_scoring.py  test_github_semantic.py  test_github_synthesis.py  test_github_telemetry.py  test_github_trending.py  test_impersonation.py  test_profile.py  test_quote_expansion.py  test_scraper.py  test_search.py  test_social_db.py  test_sqlite_pragmas.py  test_thread.py  test_token_extractor.py  test_tv_symbol_resolver.py  test_twscrape_backend.py  test_youtube_scraper.py
